--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             dayjs.locale('pt-br')
         </script>
         <script type="text/javascript" src="./index.js " defer=""></script>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="./index.css">
             <body>
                 <table>
                     <thead style="text-align: left">
